<resources>

    <string name="app_name">Local Trade</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">LocalTrade</string>
    <string name="LocalTrade">Local Trade</string>
    <string name="buy_button">Nakup</string>
    <string name="sell_button">Prodej</string>
    <string name="showMap_button">Ukaž mapu</string>
    <string name="app_description">Application for local trading.</string>
    <string name="splashMap">Intro map</string>
    <string name="test">TestString</string>
    <string name="filter">Filter</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="show_on_map">Show on map</string>
    <string name="send_message">Send message</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="cancel_dialog_message">You\'ll loose all filled data.</string>
    <string name="cancel_dialog_title">Leave registration form?</string>
    <string name="register_user">Registration</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-type password</string>
    <string name="conversation_title">User 1</string>
    <string name="conversation_text">Hi there, I wanna buy this beautiful red chair.</string>
    <string name="logout">logout</string>
    <string name="doneButton">Done</string>
    <string name="cancelButton">Cancel</string>
    <string name="showList">Searched items</string>
    <string name="name_of_item">Title eg. "Chair"</string>
    <string name="price_of_item">Price</string>
    <string name="photo_of_item">Choose photo</string>
    <string name="description_of_item">Some very very long description of my amazing wooden chair made of wood. Haha it\'s like brick-shape object made of brick!!</string>
    <string name="myItems">My items</string>
    <string name="search">search</string>
    <string name="locationButton">Location button</string>
    <string name="photo">Photo of item</string>
    <string name="currency">Kč</string>
    <string name="price">Price</string>
    <string name="state">State</string>
    <string name="distance_unit">km</string>
    <string name="itemTitle">Red chair</string>
    <string name="itemState">New</string>
    <string name="itemRealState">very bad</string>
    <string name="itemPrice">2000 Kč </string>
    <string name="itemRealPrice">$150</string>
    <string name="itemDistance">1 km</string>
    <string name="itemDescriptionTitle">Description</string>
    <string name="itemDescription">Spare ribs ground round salami, turducken pork loin turkey tenderloin pig meatloaf swine bresaola pork belly meatball beef corned beef. Filet mignon turkey pork kielbasa pork loin ground round ham hock. Ham hock andouille tongue flank pork belly pork loin.</string>
    <string name="registration_title">Registration</string>
    <string name="my_items_title">My items</string>
    <string name="add_new_item">Add new item</string>
    <string name="edit_item">Edit item</string>
    <string name="conversations">Conversations</string>
    <string name="my_item_detail">My item detail</string>
    <string name="found_items">Found items</string>
    <string name="found_items_detail">Item detail</string>
    <string name="are_you_registred">Are you registered?</string>
    <string name="different_password">Passwords are not the same</string>
    <string name="taken_username">This username is allready taken</string>
    <string name="wrong_username_or_password">Username or password is incorrect</string>
    <string name="send_button">Send button</string>

    <string-array name="states_array">
        <item>New</item>
        <item>Used</item>
        <item>Dysfunctional</item>
        <item>Broken</item>
    </string-array>

    <string name="empty_password">Password must not be empty</string>
    <string name="empty_username">Username must not be empty</string>
    <string name="distance">Distance</string>
    <string name="distance_value">%d km</string>
    <string name="price_value">%d Kč</string>
    <string name="price_range">%1$d - %1$d Kč</string>
    <string name="state_new">New</string>
    <string name="state_used">Used</string>
    <string name="state_dysfunctional">Dysfunctional</string>
    <string name="state_broken">Broken</string>

</resources>