<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/distance_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/distance_value"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/distance_value"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="14dp"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/price_label"
        android:layout_marginTop="14dp" />

    <TextView
        android:id="@+id/minPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar2"
        android:text="@string/price_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/maxPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekBar2"
        android:text="@string/price_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/price_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/price_label"
        android:layout_alignBottom="@+id/price_label"
        android:layout_alignParentRight="true"
        android:text="@string/price_range"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/state_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/minPrice"
        android:layout_marginTop="16dp"
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/state_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/state_label"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/state_new" />

    <CheckBox
        android:id="@+id/state_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state_new"
        android:layout_below="@+id/state_new"
        android:text="@string/state_used" />

    <CheckBox
        android:id="@+id/state_dysfunctional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state_used"
        android:layout_below="@+id/state_used"
        android:text="@string/state_dysfunctional" />

    <CheckBox
        android:id="@+id/state_broken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/state_dysfunctional"
        android:layout_below="@+id/state_dysfunctional"
        android:text="@string/state_broken" />

</RelativeLayout>