<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/photo"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/itemImage"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toRightOf="@+id/itemImage"
        android:text="@string/itemTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_title"
        android:layout_below="@+id/item_title"
        android:layout_marginTop="10dp"
        android:text="@string/itemPrice"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/item_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/itemImage"
        android:layout_alignLeft="@+id/item_price"
        android:text="@string/itemState"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemImage"
        android:layout_below="@+id/itemImage"
        android:layout_marginTop="20dp"
        android:text="@string/itemDescriptionTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignLeft="@+id/item_description_title"
        android:layout_alignRight="@+id/item_title"
        android:layout_below="@+id/item_description_title"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/itemDescription" />

    <TextView
        android:id="@+id/item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/item_state"
        android:layout_alignBottom="@+id/item_state"
        android:layout_alignRight="@+id/item_description"
        android:text="@string/itemDistance"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>