<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_search"
        android:onClick="iconClick"
        android:showAsAction="ifRoom|withText"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/myItems"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_edit"
        android:onClick="iconClick"
        android:showAsAction="ifRoom|withText"
        android:title="@string/myItems">
    </item>
    <item
        android:id="@+id/showList"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:onClick="iconClick"
        android:showAsAction="ifRoom|withText"
        android:title="@string/showList">
    </item>

</menu>