<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listview_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/photo"
        android:scaleType="fitXY"
        android:src="@drawable/no_image" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/item_image"
        android:text="@string/itemTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_title"
        android:layout_below="@+id/item_title"
        android:layout_marginTop="10dp"
        android:text="@string/itemState"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/item_state"
        android:layout_below="@+id/item_state"
        android:layout_marginTop="10dp"
        android:text="@string/itemPrice"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/item_state"
        android:layout_marginRight="20dp"
        android:text="@string/itemDistance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/grey" />

</RelativeLayout>